[gd_scene load_steps=5 format=2]

[ext_resource path="res://Other/Font_Extra_small.tres" type="DynamicFont" id=1]
[ext_resource path="res://Other/Settings.gd" type="Script" id=2]
[ext_resource path="res://Sprites/button_arrow_left.png" type="Texture" id=3]
[ext_resource path="res://Other/Font_small.tres" type="DynamicFont" id=4]

[node name="Settings" type="Node"]
script = ExtResource( 2 )

[node name="HSlider" type="HSlider" parent="."]
margin_left = 39.7892
margin_top = 28.3997
margin_right = 286.789
margin_bottom = 44.3997
max_value = 2.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider2" type="HSlider" parent="."]
margin_left = 39.7892
margin_top = 75.0847
margin_right = 286.789
margin_bottom = 91.0847
max_value = 2.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 44.0
margin_top = 21.0
margin_right = 89.0
margin_bottom = 30.0
custom_fonts/font = ExtResource( 1 )
text = "Music"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
margin_left = 147.756
margin_top = 91.0847
margin_right = 175.756
margin_bottom = 100.085
custom_fonts/font = ExtResource( 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="."]
margin_left = 267.67
margin_top = 91.0847
margin_right = 302.67
margin_bottom = 100.085
custom_fonts/font = ExtResource( 1 )
text = "200"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="."]
margin_left = 37.0
margin_top = 91.0847
margin_right = 49.0
margin_bottom = 100.085
custom_fonts/font = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label9" type="Label" parent="."]
margin_left = 147.756
margin_top = 44.3997
margin_right = 175.756
margin_bottom = 53.4
custom_fonts/font = ExtResource( 1 )
text = "100"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label10" type="Label" parent="."]
margin_left = 267.67
margin_top = 44.3997
margin_right = 302.67
margin_bottom = 53.4
custom_fonts/font = ExtResource( 1 )
text = "200"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label11" type="Label" parent="."]
margin_left = 37.0
margin_top = 44.3997
margin_right = 49.0
margin_bottom = 53.4
custom_fonts/font = ExtResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 43.0
margin_top = 63.9977
margin_right = 96.0
margin_bottom = 72.9977
custom_fonts/font = ExtResource( 1 )
text = "Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 210.75
margin_top = 1.25
margin_right = 316.75
margin_bottom = 25.25
custom_fonts/font = ExtResource( 4 )
text = "Back"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="button_arrow_left" type="Sprite" parent="Button"]
position = Vector2( 15.0479, 11.5162 )
scale = Vector2( 0.246, 0.246 )
texture = ExtResource( 3 )

[node name="Button2" type="Button" parent="."]
margin_left = 107.422
margin_top = 104.244
margin_right = 216.422
margin_bottom = 124.244
custom_fonts/font = ExtResource( 1 )
text = "Test Sound"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="value_changed" from="HSlider2" to="." method="_on_HSlider2_value_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
